fixed sorting and shifting bug

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,7 +36,7 @@ textarea {
 }
 
 .input-submit-button {
-  width: 850px;
+  width: 400px;
   height: 600px;
   float: right;
 }
